syntax = "proto3";

option go_package="github.com/marketplace-go-backend/common/notification";

message SendEmailRequest {
    string to = 1;
    string subject = 2;
    string body = 3;
}

message SendEmailResponse {
    bool success = 1;
    string message = 2;
}

service NotificationService {
    rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}
